# desafio_1

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: configuracion.h  frontend.h  mecanica.h  movimiento.h
src/: configuracion.cpp  frontend.cpp  mecanica.cpp  movimiento.cpp
